@@ -5,7 +5,7 @@ Plone's products are loaded, and a Plone site will be created. This
 happens at module level, which makes it faster to run each test, but
 slows down test runner startup.
 """
-import os
+
 from Products.Five import zcml
 from Products.Five import fiveconfigure
 
